[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47.0",
    "psycopg2-binary>=2.9.10",
    "pytelegrambotapi>=4.27.0",
    "python-telegram-bot>=22.1",
    "requests>=2.32.3",
    "telebot>=0.0.5",
    "telegram>=0.0.1",
]
